# ClickREST

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/dbt_ish/cli/: README.md  dbt_ish_cli.py  pyproject.toml
tests/hello_world/api/: hello_world_api.py  serve.sh
tests/hello_world/cli/: hello_world_cli.py  pyproject.toml
