[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "ClickREST"
authors = [{name = "Ian Knox", email = "ian@ianknox.net"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
version = "0.1.0"
description = "A simple REST API for Click Apps"
dependencies = [
    "fastapi>=0.7",
    "python-dotenv>=0.20.0"
]

[project.urls]
Home = "https://ianknox.net"